projects/examples/source/02.04.02.cpp
////////////////////////////////////////////////////////////////////

#include <iostream>

////////////////////////////////////////////////////////////////////

void handle_v1(int x, int y = 0)
{ 
	std::cout << "handle_v1 : x = " << x << " y = " << y << '\n';
}

////////////////////////////////////////////////////////////////////

// void handle_v2(int x = 0, int y) // error
// { 
//     std::cout << "handle_v2 : x = " << x << " y = " << y << '\n';
// }

////////////////////////////////////////////////////////////////////

int main()
{
    handle_v1(1);

//  handle_v2(1); // error
}

////////////////////////////////////////////////////////////////////